# deepresearch-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts_provider_demo/63e9da6f4638/: research_report.html  research_report.md  run_manifest.json
artifacts_provider_demo/d5e40df0d784/: events.csv  findings.json  research_report.html  research_report.md  run_manifest.json
artifacts_provider_demo2/2f91022e225a/: findings.json  research_report.html  research_report.md  run_manifest.json  source_ledger.json
artifacts_provider_demo3/0cbdd9cb4394/: entities.csv  findings.json  research_report.html  research_report.md  run_manifest.json  source_ledger.json
docs/: architecture.md  quickstart.md  roadmap.md
examples/: robotics_funding.txt
scripts/: run_demo.sh
src/research_operator/: __init__.py  api.py  cli.py  config.py  schemas.py
src/research_operator/runtime/: __init__.py  analyzer.py  artifacts.py  doctor.py  engine.py  extraction.py  fusion.py  history.py  monitoring.py  notifications.py  planner.py  provider_registry.py  providers.py  release_gate.py  source_io.py  verification.py
tests/: test_acceptance.py  test_api.py  test_cli.py
